# codontopo

./: .coverage  .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CODON_TOPO_PRD_v1.docx  LICENSE  README.md  pyproject.toml
.hypothesis/constants/: 296e1b45822f8e83  3233bea97db7610d  423288d65ed2696f  4846d873c5beaaa9  86b79573ffe7903e  90c0e49b22e24a43  afdd30ee210f10d7  c105b05eed628ab8  d20084570b341fb8  da39a3ee5e6b4b0d  e7621f3119728d24
codon_topo_preliminary/: README.md  all_codes.py  summary_table.py  verify_embedding.py  verify_filtration.py  verify_kras.py  verify_mitochondrial.py
data/: assembly_accessions.tsv
data/codonsafe/: ANALYSIS_RESULTS.md  DATA_MANIFEST.md
data/trnascan_results/: b_nonstop_P57.out  b_nonstop_P57.stats  b_stoltei.out  b_stoltei.stats  e_aediculatus.out  e_aediculatus.stats  e_amieti.out  e_amieti.stats  e_focardii.out  e_focardii.stats  e_parawoodruffi.out  e_parawoodruffi.stats  e_weissei.out  e_weissei.stats  e_woodruffi1.out  e_woodruffi1.stats  e_woodruffi2.out  e_woodruffi2.stats  f_salina.out  f_salina.stats  h_grandinella.out  h_grandinella.stats  i_multifiliis.out  i_multifiliis.stats  m_genitalium.out  m_genitalium.stats  m_pneumoniae.out  m_pneumoniae.stats  o_trifallax.out  o_trifallax.stats  p_persalinus.out  p_persalinus.stats  p_tetraurelia.out  p_tetraurelia.stats  s_coeruleus.out  s_coeruleus.stats  t_thermophila.out  t_thermophila.stats
docs/plans/: 2026-04-05-ws1-core-package.md  2026-04-05-ws1-core-package.tasks.json  2026-04-05-ws2-ws6.md  2026-04-05-ws2-ws6.tasks.json  2026-04-25-reviewer-revision-plan.md
output/: CLEANUP_SESSION_PROMPT.md  FINAL_RESULTS_SUMMARY.md  FINAL_RESULTS_WITH_FIXES.md  IMPLEMENTATION_RESULTS.md  REFINED_PREDICTIONS_WITH_CODEBASE.md  STRENGTHENED_ANALYSIS_REPORT.md  TESTABLE_PREDICTIONS.md  VISUALIZATION_APP_PROMPT.md  VISUALIZATION_APP_PROMPT_v2.md  catalogue.csv  catalogue.json  claims.json  clayworth_CLAIMS_BROKEN_REPORT.md  clayworth_FINAL_SYNTHESIS.md  clayworth_analysis_report.md  clayworth_detailed_report.md  coloring_optimality.json  condlogit_clade_sensitivity.json  condlogit_restricted_candidate.json  depth_calibration.csv  depth_calibration.json  disconnection_catalogue.csv  disconnections.json  embedding_coords.csv  evolutionary_simulation.json  exploratory_tests.json  fano_predictions.csv  filtration.json  hypercube_coloring.html  manuscript.typ  manuscript_stats.json  persistent_homology.csv  phylogenetic_sensitivity.json  reassignment_analysis.json  reassignment_db.csv  references.bib  supplement.typ  supplement_codonsafe.typ  synbio_landscape.csv  tavily_clayworth.json  (+7 more)
output/cli_run/: catalogue.json  claims.json  coloring_optimality.json  depth_calibration.json  disconnections.json  filtration.json  kras_fano.json  reassignment_analysis.json  trna_evidence.json
output/codonsafe/: analysis_stats.json  ostrov_segment_analysis.csv  ostrov_segments_for_ggplot.csv  ostrov_summary.csv  syn57_s9_deviation_summary.csv  syn57_s9_deviations_classified.csv  syn57_s9_for_ggplot.csv  syn57_s9_genuine_deviations.csv  syn57_s9_genuine_summary.csv  syn57_s9_sensitivity_table.csv
output/styles/: elsevier-harvard.csl
output/tables/: T10_reassignment_db.csv  T1_claim_hierarchy.csv  T2_disconnection_catalogue.csv  T3_coloring_optimality.json  T3_coloring_optimality_summary.csv  T4_per_table_optimality.csv  T5_rho_robustness.csv  T6_score_decomposition.json  T7_trna_per_pairing.csv  T7_trna_summary.csv  T8_bit_bias.csv  T9_topology_avoidance.csv  TS_encoding_sweep.csv  T_evol_sim_summary.csv  T_likelihood_ratio_tests.csv  T_model_coefficients.csv  T_model_comparison.csv  T_ranks_M1_phys.csv  T_ranks_M2_topo.csv  T_ranks_M2_topo_k43.csv  T_ranks_M3_phys_topo.csv  T_ranks_M3_phys_topo_k43.csv  T_ranks_M4_full.csv
scripts/: finalize_manuscript_stats.py  generate_manuscript_stats.py  generate_tables.py  restricted_candidate_sensitivity.py  run_trnascan.sh
src/codon_topo/: __init__.py  cli.py
src/codon_topo/analysis/: coloring_optimality.py  cosmic_query.py  depth_calibration.py  evolutionary_simulation.py  null_models.py  reassignment_db.py  statistical_utils.py  synbio_feasibility.py  trna_evidence.py
src/codon_topo/analysis/codonsafe/: __init__.py  aggregate.py  classify.py  models.py  normalize.py  run_analyses.py  stats.py
src/codon_topo/analysis/codonsafe/loaders/: __init__.py  fredens2019.py  genbank_utils.py  napolitano2016.py  ostrov2016.py  robertson2025_syn57.py
src/codon_topo/core/: embedding.py  encoding.py  fano.py  filtration.py  genetic_codes.py  homology.py
src/codon_topo/data/: grantham.json  kyte_doolittle.json  miyata.json  polar_requirement.json
src/codon_topo/reports/: __init__.py  catalogue.py  claim_hierarchy.py
src/codon_topo/visualization/: data_export.py
src/codon_topo/visualization/R/: all_figures.R  barcode_plot.R  codonsafe_figures.R  disconnection_heatmap.R  embedding_scatter.R  fig_combined_recoding.R  fig_condlogit.R  fig_encoding_sweep.R  manuscript_figures.R  strengthened_figures.R  theme_codon.R
tests/: conftest.py  test_catalogue.py  test_claim_hierarchy.py  test_cli.py  test_codonsafe.py  test_cosmic_query.py  test_depth_calibration.py  test_embedding.py  test_encoding.py  test_evolutionary_simulation.py  test_fano.py  test_filtration.py  test_genetic_codes.py  test_homology.py  test_integration_ws2_ws6.py  test_kras_enrichment.py  test_new_analyses.py  test_null_models.py  test_reassignment_db.py  test_reassignment_stats.py  test_refinements.py  test_regression.py  test_synbio_feasibility.py  test_visualization.py  test_ws_exports.py
toposafe/: .gitignore  README.md  pyproject.toml
toposafe/scripts/: download_data.sh  run.sh
