[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codon-topo"
version = "0.2.0"
description = "Codon Geometry Validation & Prediction Engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "requests>=2.28",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
codon-topo = "codon_topo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.mypy]
ignore_missing_imports = true
